#9 Updated remaining NSC* classes + misc edits

--- a/docs/api-reference/CRMScript.NetServer.NSCredentialUser.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialUser.yml
@@ -3,15 +3,14 @@ items:
 - uid: CRMScript.NetServer.NSCredentialUser
   commentId: T:CRMScript.NetServer.NSCredentialUser
   id: NSCredentialUser
-  so.intellisense: Void.NSCredentialUser
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCredentialUser.#ctor
   - CRMScript.NetServer.NSCredentialUser.GetCanCreatePerson()
   - CRMScript.NetServer.NSCredentialUser.GetColumns()
   - CRMScript.NetServer.NSCredentialUser.GetDisplayValue()
   - CRMScript.NetServer.NSCredentialUser.GetValue()
-  - CRMScript.NetServer.NSCredentialUser.#ctor
   - CRMScript.NetServer.NSCredentialUser.SetCanCreatePerson(Bool)
   - CRMScript.NetServer.NSCredentialUser.SetColumns(String[])
   - CRMScript.NetServer.NSCredentialUser.SetDisplayValue(String)
@@ -22,82 +21,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCredentialUser.GetCanCreatePerson()
-  commentId: M:CRMScript.NetServer.NSCredentialUser.GetCanCreatePerson()
-  id: 'GetCanCreatePerson()'
-  so.intellisense: NSCredentialUser.GetCanCreatePerson
-  langs:
-  - crmscript
-  name: 'GetCanCreatePerson()'
-  nameWithType: NSCredentialUser.GetCanCreatePerson()
-  fullName: CRMScript.NetServer.NSCredentialUser.GetCanCreatePerson()
-  type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSCredentialUser thing;\nBool canCreatePerson = thing.GetCanCreatePerson();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Bool GetCanCreatePerson()
-    parameters:
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSCredentialUser thing;\nBool canCreatePerson = thing.GetCanCreatePerson();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredentialUser.GetColumns()
-  commentId: M:CRMScript.NetServer.NSCredentialUser.GetColumns()
-  id: 'GetColumns()'
-  so.intellisense: NSCredentialUser.GetColumns
-  langs:
-  - crmscript
-  name: 'GetColumns()'
-  nameWithType: NSCredentialUser.GetColumns()
-  fullName: CRMScript.NetServer.NSCredentialUser.GetColumns()
-  type: Method
-  summary: "\nColumns, matching CredentialUsers.Headings<p></p>\n<strong>Returns:</strong>String[]<p></p>\n<pre><code>NSCredentialUser thing;\nString[] columns = thing.GetColumns();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String[] GetColumns()
-    parameters:
-    return:
-      type: CRMScript.Global.String[]
-  example: 
-  - "\n<pre><code>NSCredentialUser thing;\nString[] columns = thing.GetColumns();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredentialUser.GetDisplayValue()
-  commentId: M:CRMScript.NetServer.NSCredentialUser.GetDisplayValue()
-  id: 'GetDisplayValue()'
-  so.intellisense: NSCredentialUser.GetDisplayValue
-  langs:
-  - crmscript
-  name: 'GetDisplayValue()'
-  nameWithType: NSCredentialUser.GetDisplayValue()
-  fullName: CRMScript.NetServer.NSCredentialUser.GetDisplayValue()
-  type: Method
-  summary: "\nDisplay value of the user.  This value needs to be applied to the Credential.DisplayValue field.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCredentialUser thing;\nString displayValue = thing.GetDisplayValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayValue()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCredentialUser thing;\nString displayValue = thing.GetDisplayValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredentialUser.GetValue()
-  commentId: M:CRMScript.NetServer.NSCredentialUser.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSCredentialUser.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSCredentialUser.GetValue()
-  fullName: CRMScript.NetServer.NSCredentialUser.GetValue()
-  type: Method
-  summary: "\nIdentification of user in the foreign system.  This value needs to be applied to the Credential.Value field<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCredentialUser thing;\nString value = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCredentialUser thing;\nString value = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialUser.#ctor
   commentId: M:CRMScript.NetServer.NSCredentialUser.#ctor
   id: '#ctor'
@@ -113,6 +36,86 @@ items:
   syntax: 
     content: NSCredentialUser
   example: 
+- uid: CRMScript.NetServer.NSCredentialUser.GetCanCreatePerson()
+  commentId: M:CRMScript.NetServer.NSCredentialUser.GetCanCreatePerson()
+  id: 'GetCanCreatePerson()'
+  so.intellisense: NSCredentialUser.GetCanCreatePerson
+  langs:
+  - crmscript
+  name: 'GetCanCreatePerson()'
+  nameWithType: NSCredentialUser.GetCanCreatePerson()
+  fullName: CRMScript.NetServer.NSCredentialUser.GetCanCreatePerson()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetCanCreatePerson()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: 
+  example: 
+  - "\n<pre><code>NSCredentialUser thing;\nBool canCreatePerson = thing.GetCanCreatePerson();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCredentialUser.GetColumns()
+  commentId: M:CRMScript.NetServer.NSCredentialUser.GetColumns()
+  id: 'GetColumns()'
+  so.intellisense: NSCredentialUser.GetColumns
+  langs:
+  - crmscript
+  name: 'GetColumns()'
+  nameWithType: NSCredentialUser.GetColumns()
+  fullName: CRMScript.NetServer.NSCredentialUser.GetColumns()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String[] GetColumns()
+    parameters: []
+    return:
+      type: CRMScript.Global.String[]
+      description: Columns, matching CredentialUsers.Headings
+  example: 
+  - "\n<pre><code>NSCredentialUser thing;\nString[] columns = thing.GetColumns();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCredentialUser.GetDisplayValue()
+  commentId: M:CRMScript.NetServer.NSCredentialUser.GetDisplayValue()
+  id: 'GetDisplayValue()'
+  so.intellisense: NSCredentialUser.GetDisplayValue
+  langs:
+  - crmscript
+  name: 'GetDisplayValue()'
+  nameWithType: NSCredentialUser.GetDisplayValue()
+  fullName: CRMScript.NetServer.NSCredentialUser.GetDisplayValue()
+  type: Method
+  summary: ""
+  remarks: "\nThis value needs to be applied to the Credential.DisplayValue field.\n"
+  syntax: 
+    content: String GetDisplayValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Display value of the user.
+  example: 
+  - "\n<pre><code>NSCredentialUser thing;\nString displayValue = thing.GetDisplayValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCredentialUser.GetValue()
+  commentId: M:CRMScript.NetServer.NSCredentialUser.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSCredentialUser.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSCredentialUser.GetValue()
+  fullName: CRMScript.NetServer.NSCredentialUser.GetValue()
+  type: Method
+  summary: ""
+  remarks: "\nThis value needs to be applied to the Credential.Value field\n"
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Identification of user in the foreign system.
+  example: 
+  - "\n<pre><code>NSCredentialUser thing;\nString value = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialUser.SetCanCreatePerson(Bool)
   commentId: M:CRMScript.NetServer.NSCredentialUser.SetCanCreatePerson(Bool)
   id: 'SetCanCreatePerson(Bool)'
@@ -126,11 +129,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetCanCreatePerson(Bool canCreatePerson)
+    content: Void SetCanCreatePerson(Bool canCreatePerson)
     parameters:
     - id: canCreatePerson
       type: CRMScript.Global.Bool
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialUser thing;\nBool canCreatePerson;\nthing.SetCanCreatePerson(canCreatePerson);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialUser.SetColumns(String[])
@@ -143,14 +148,16 @@ items:
   nameWithType: NSCredentialUser.SetColumns(String[])
   fullName: CRMScript.NetServer.NSCredentialUser.SetColumns(String[])
   type: Method
-  summary: "\nColumns, matching CredentialUsers.Headings\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetColumns(String[] columns)
+    content: Void SetColumns(String[] columns)
     parameters:
     - id: columns
       type: CRMScript.Global.String[]
-      description: 
+      description: Columns, matching CredentialUsers.Headings
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialUser thing;\nString[] columns;\nthing.SetColumns(columns);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialUser.SetDisplayValue(String)
@@ -163,14 +170,16 @@ items:
   nameWithType: NSCredentialUser.SetDisplayValue(String)
   fullName: CRMScript.NetServer.NSCredentialUser.SetDisplayValue(String)
   type: Method
-  summary: "\nDisplay value of the user.  This value needs to be applied to the Credential.DisplayValue field.\n"
-  remarks: 
+  summary: ""
+  remarks: "\nThis value needs to be applied to the Credential.DisplayValue field.\n"
   syntax: 
-    content: SetDisplayValue(String displayValue)
+    content: Void SetDisplayValue(String displayValue)
     parameters:
     - id: displayValue
       type: CRMScript.Global.String
-      description: 
+      description: Display value of the user.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialUser thing;\nString displayValue;\nthing.SetDisplayValue(displayValue);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialUser.SetValue(String)
@@ -183,14 +192,16 @@ items:
   nameWithType: NSCredentialUser.SetValue(String)
   fullName: CRMScript.NetServer.NSCredentialUser.SetValue(String)
   type: Method
-  summary: "\nIdentification of user in the foreign system.  This value needs to be applied to the Credential.Value field\n"
-  remarks: 
+  summary: ""
+  remarks: "\nThis value needs to be applied to the Credential.Value field\n"
   syntax: 
-    content: SetValue(String value)
+    content: Void SetValue(String value)
     parameters:
     - id: value
       type: CRMScript.Global.String
-      description: 
+      description: Identification of user in the foreign system.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialUser thing;\nString value;\nthing.SetValue(value);</code></pre>\n"
 references:
@@ -226,9 +237,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.String
-  commentId: T:CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
   isExternal: true
-  name: String
-  nameWithType: String
-  fullName: CRMScript.Global.String
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
