--- a/docs/api-reference/CRMScript.NetServer.NSCredentialsGroup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialsGroup.yml
@@ -3,13 +3,12 @@ items:
 - uid: CRMScript.NetServer.NSCredentialsGroup
   commentId: T:CRMScript.NetServer.NSCredentialsGroup
   id: NSCredentialsGroup
-  so.intellisense: Void.NSCredentialsGroup
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCredentialsGroup.#ctor
   - CRMScript.NetServer.NSCredentialsGroup.GetDisplayName()
   - CRMScript.NetServer.NSCredentialsGroup.GetName()
-  - CRMScript.NetServer.NSCredentialsGroup.#ctor
   - CRMScript.NetServer.NSCredentialsGroup.SetDisplayName(String)
   - CRMScript.NetServer.NSCredentialsGroup.SetName(String)
   name: NSCredentialsGroup
@@ -18,44 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCredentialsGroup.GetDisplayName()
-  commentId: M:CRMScript.NetServer.NSCredentialsGroup.GetDisplayName()
-  id: 'GetDisplayName()'
-  so.intellisense: NSCredentialsGroup.GetDisplayName
-  langs:
-  - crmscript
-  name: 'GetDisplayName()'
-  nameWithType: NSCredentialsGroup.GetDisplayName()
-  fullName: CRMScript.NetServer.NSCredentialsGroup.GetDisplayName()
-  type: Method
-  summary: "\nThe display name of the group to display to the user.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCredentialsGroup thing;\nString displayName = thing.GetDisplayName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCredentialsGroup thing;\nString displayName = thing.GetDisplayName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredentialsGroup.GetName()
-  commentId: M:CRMScript.NetServer.NSCredentialsGroup.GetName()
-  id: 'GetName()'
-  so.intellisense: NSCredentialsGroup.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSCredentialsGroup.GetName()
-  fullName: CRMScript.NetServer.NSCredentialsGroup.GetName()
-  type: Method
-  summary: "\nThis is the full name of the group as needed to discover the users within the group.  this value should not be displayed to the end user.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCredentialsGroup thing;\nString name = thing.GetName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCredentialsGroup thing;\nString name = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialsGroup.#ctor
   commentId: M:CRMScript.NetServer.NSCredentialsGroup.#ctor
   id: '#ctor'
@@ -71,6 +32,46 @@ items:
   syntax: 
     content: NSCredentialsGroup
   example: 
+- uid: CRMScript.NetServer.NSCredentialsGroup.GetDisplayName()
+  commentId: M:CRMScript.NetServer.NSCredentialsGroup.GetDisplayName()
+  id: 'GetDisplayName()'
+  so.intellisense: NSCredentialsGroup.GetDisplayName
+  langs:
+  - crmscript
+  name: 'GetDisplayName()'
+  nameWithType: NSCredentialsGroup.GetDisplayName()
+  fullName: CRMScript.NetServer.NSCredentialsGroup.GetDisplayName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDisplayName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The display name of the group to display to the user.
+  example: 
+  - "\n<pre><code>NSCredentialsGroup thing;\nString displayName = thing.GetDisplayName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCredentialsGroup.GetName()
+  commentId: M:CRMScript.NetServer.NSCredentialsGroup.GetName()
+  id: 'GetName()'
+  so.intellisense: NSCredentialsGroup.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSCredentialsGroup.GetName()
+  fullName: CRMScript.NetServer.NSCredentialsGroup.GetName()
+  type: Method
+  summary: ""
+  remarks: "\nThis value should not be displayed to the end user!\n"
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The full name of the group as needed to discover the users within the group.
+  example: 
+  - "\n<pre><code>NSCredentialsGroup thing;\nString name = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialsGroup.SetDisplayName(String)
   commentId: M:CRMScript.NetServer.NSCredentialsGroup.SetDisplayName(String)
   id: 'SetDisplayName(String)'
@@ -81,14 +82,16 @@ items:
   nameWithType: NSCredentialsGroup.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSCredentialsGroup.SetDisplayName(String)
   type: Method
-  summary: "\nThe display name of the group to display to the user.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetDisplayName(String displayName)
+    content: Void SetDisplayName(String displayName)
     parameters:
     - id: displayName
       type: CRMScript.Global.String
-      description: 
+      description: The display name of the group to display to the user.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialsGroup thing;\nString displayName;\nthing.SetDisplayName(displayName);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialsGroup.SetName(String)
@@ -101,14 +104,16 @@ items:
   nameWithType: NSCredentialsGroup.SetName(String)
   fullName: CRMScript.NetServer.NSCredentialsGroup.SetName(String)
   type: Method
-  summary: "\nThis is the full name of the group as needed to discover the users within the group.  this value should not be displayed to the end user.\n"
-  remarks: 
+  summary: "\nn"
+  remarks: "\nThis value should not be displayed to the end user.\n"
   syntax: 
-    content: SetName(String name)
+    content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The full name of the group as needed to discover the users within the group.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialsGroup thing;\nString name;\nthing.SetName(name);</code></pre>\n"
 references:
@@ -124,3 +129,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
