--- a/docs/api-reference/CRMScript.NetServer.NSCustomerLanguage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerLanguage.yml
@@ -3,14 +3,13 @@ items:
 - uid: CRMScript.NetServer.NSCustomerLanguage
   commentId: T:CRMScript.NetServer.NSCustomerLanguage
   id: NSCustomerLanguage
-  so.intellisense: Void.NSCustomerLanguage
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCustomerLanguage.#ctor
   - CRMScript.NetServer.NSCustomerLanguage.GetId()
   - CRMScript.NetServer.NSCustomerLanguage.GetTooltip()
   - CRMScript.NetServer.NSCustomerLanguage.GetValue()
-  - CRMScript.NetServer.NSCustomerLanguage.#ctor
   - CRMScript.NetServer.NSCustomerLanguage.SetId(Integer)
   - CRMScript.NetServer.NSCustomerLanguage.SetTooltip(String)
   - CRMScript.NetServer.NSCustomerLanguage.SetValue(String)
@@ -20,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCustomerLanguage.GetId()
-  commentId: M:CRMScript.NetServer.NSCustomerLanguage.GetId()
-  id: 'GetId()'
-  so.intellisense: NSCustomerLanguage.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSCustomerLanguage.GetId()
-  fullName: CRMScript.NetServer.NSCustomerLanguage.GetId()
-  type: Method
-  summary: "\nGet the primary key (id) for the NSCustomerLanguage<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSCustomerLanguage thing;\nInteger id = thing.GetId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSCustomerLanguage thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCustomerLanguage.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSCustomerLanguage.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSCustomerLanguage.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSCustomerLanguage.GetTooltip()
-  fullName: CRMScript.NetServer.NSCustomerLanguage.GetTooltip()
-  type: Method
-  summary: "\nGet the tooltip description for the NSCustomerLanguage list item.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCustomerLanguage thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCustomerLanguage thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCustomerLanguage.GetValue()
-  commentId: M:CRMScript.NetServer.NSCustomerLanguage.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSCustomerLanguage.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSCustomerLanguage.GetValue()
-  fullName: CRMScript.NetServer.NSCustomerLanguage.GetValue()
-  type: Method
-  summary: "\nGet the name of the NSCustomerLanguage.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCustomerLanguage thing;\nString name = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCustomerLanguage thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCustomerLanguage.#ctor
   commentId: M:CRMScript.NetServer.NSCustomerLanguage.#ctor
   id: '#ctor'
@@ -92,6 +34,66 @@ items:
   syntax: 
     content: NSCustomerLanguage
   example: 
+- uid: CRMScript.NetServer.NSCustomerLanguage.GetId()
+  commentId: M:CRMScript.NetServer.NSCustomerLanguage.GetId()
+  id: 'GetId()'
+  so.intellisense: NSCustomerLanguage.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSCustomerLanguage.GetId()
+  fullName: CRMScript.NetServer.NSCustomerLanguage.GetId()
+  type: Method
+  summary: "\nGets the primary key (ID) for the NSCustomerLanguage.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description:
+  example: 
+  - "\n<pre><code>NSCustomerLanguage thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCustomerLanguage.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSCustomerLanguage.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSCustomerLanguage.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSCustomerLanguage.GetTooltip()
+  fullName: CRMScript.NetServer.NSCustomerLanguage.GetTooltip()
+  type: Method
+  summary: "\nGets the tooltip description for the NSCustomerLanguage list item.\n"
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description:
+  example: 
+  - "\n<pre><code>NSCustomerLanguage thing;\nString descr = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCustomerLanguage.GetValue()
+  commentId: M:CRMScript.NetServer.NSCustomerLanguage.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSCustomerLanguage.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSCustomerLanguage.GetValue()
+  fullName: CRMScript.NetServer.NSCustomerLanguage.GetValue()
+  type: Method
+  summary: "\nGets the name of the NSCustomerLanguage.\n"
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description:
+  example: 
+  - "\n<pre><code>NSCustomerLanguage thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCustomerLanguage.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSCustomerLanguage.SetId(Integer)
   id: 'SetId(Integer)'
@@ -102,14 +104,16 @@ items:
   nameWithType: NSCustomerLanguage.SetId(Integer)
   fullName: CRMScript.NetServer.NSCustomerLanguage.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSCustomerLanguage\n"
+  summary: "\nSets the primary key (ID) for the NSCustomerLanguage\n"
   remarks: 
   syntax: 
-    content: SetId(Integer id)
+    content: Void SetId(Integer id)
     parameters:
     - id: id
       type: CRMScript.Global.Integer
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCustomerLanguage thing;\nthing.SetId(123);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCustomerLanguage.SetTooltip(String)
@@ -122,14 +126,16 @@ items:
   nameWithType: NSCustomerLanguage.SetTooltip(String)
   fullName: CRMScript.NetServer.NSCustomerLanguage.SetTooltip(String)
   type: Method
-  summary: "\nSet the tooltip description for the NSCustomerLanguage list item.\n"
+  summary: "\nSets the tooltip description for the NSCustomerLanguage list item.\n"
   remarks: 
   syntax: 
-    content: SetTooltip(String tooltip)
+    content: Void SetTooltip(String tooltip)
     parameters:
     - id: tooltip
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCustomerLanguage thing;\nString descr = &quot;something new&quot;;\nthing.SetTooltip(descr);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCustomerLanguage.SetValue(String)
@@ -142,14 +148,16 @@ items:
   nameWithType: NSCustomerLanguage.SetValue(String)
   fullName: CRMScript.NetServer.NSCustomerLanguage.SetValue(String)
   type: Method
-  summary: "\nSet the name of the NSCustomerLanguage item.\n"
+  summary: "\nSets the name of the NSCustomerLanguage item.\n"
   remarks: 
   syntax: 
-    content: SetValue(String value)
+    content: Void SetValue(String value)
     parameters:
     - id: value
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCustomerLanguage thing;\nthing.SetValue(&quot;frotz&quot;);</code></pre>\n"
 references:
@@ -171,3 +179,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
