--- a/docs/api-reference/CRMScript.NetServer.NSNavigatorCompany.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSNavigatorCompany.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSNavigatorCompany.GetId()
   fullName: CRMScript.NetServer.NSNavigatorCompany.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSNavigatorCompany<p></p>\n<strong>Returns:</strong>Integer NavigatorCompany id.<p></p>\n<pre><code>NSNavigatorCompany thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSNavigatorCompany<p></p>\n<strong>Returns:</strong>Integer NavigatorCompany id.<p></p>\n<pre><code>NSNavigatorCompany thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSNavigatorCompany.SetId(Integer)
   fullName: CRMScript.NetServer.NSNavigatorCompany.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSNavigatorCompany\n"
+  summary: "\nSet the primary key (ID) for the NSNavigatorCompany\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
