--- a/docs/api-reference/CRMScript.NetServer.NSPaymentTerm.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPaymentTerm.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSPaymentTerm.GetId()
   fullName: CRMScript.NetServer.NSPaymentTerm.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSPaymentTerm<p></p>\n<strong>Returns:</strong>Integer NSPaymentTerm id.<p></p>\n<pre><code>NSPaymentTerm thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSPaymentTerm<p></p>\n<strong>Returns:</strong>Integer NSPaymentTerm id.<p></p>\n<pre><code>NSPaymentTerm thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSPaymentTerm.SetId(Integer)
   fullName: CRMScript.NetServer.NSPaymentTerm.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSPaymentTerm\n"
+  summary: "\nSet the primary key (ID) for the NSPaymentTerm\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
