--- a/docs/api-reference/CRMScript.NetServer.NSProductType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProductType.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSProductType.GetId()
   fullName: CRMScript.NetServer.NSProductType.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSProductType<p></p>\n<strong>Returns:</strong>Integer NSProductType id.<p></p>\n<pre><code>NSProductType thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSProductType<p></p>\n<strong>Returns:</strong>Integer NSProductType id.<p></p>\n<pre><code>NSProductType thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSProductType.SetId(Integer)
   fullName: CRMScript.NetServer.NSProductType.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSProductType\n"
+  summary: "\nSet the primary key (ID) for the NSProductType\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
