--- a/docs/api-reference/CRMScript.NetServer.NSProjectType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectType.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSProjectType.GetId()
   fullName: CRMScript.NetServer.NSProjectType.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSProjectType<p></p>\n<strong>Returns:</strong>Integer NSProjectType id.<p></p>\n<pre><code>NSProjectType thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSProjectType<p></p>\n<strong>Returns:</strong>Integer NSProjectType id.<p></p>\n<pre><code>NSProjectType thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSProjectType.SetId(Integer)
   fullName: CRMScript.NetServer.NSProjectType.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSProjectType\n"
+  summary: "\nSet the primary key (ID) for the NSProjectType\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
