--- a/docs/api-reference/CRMScript.NetServer.NSRating.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRating.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSRating.GetId()
   fullName: CRMScript.NetServer.NSRating.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSRating<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSRating thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSRating<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSRating thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSRating.SetId(Integer)
   fullName: CRMScript.NetServer.NSRating.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSRating\n"
+  summary: "\nSet the primary key (ID) for the NSRating\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
