--- a/docs/api-reference/CRMScript.NetServer.NSReasonSold.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReasonSold.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSReasonSold.GetId()
   fullName: CRMScript.NetServer.NSReasonSold.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the ReasonSold<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSReasonSold thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the ReasonSold<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSReasonSold thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSReasonSold.SetId(Integer)
   fullName: CRMScript.NetServer.NSReasonSold.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the ReasonSold\n"
+  summary: "\nSet the primary key (ID) for the ReasonSold\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
