--- a/docs/api-reference/CRMScript.NetServer.NSReasonStalled.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReasonStalled.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSReasonStalled.GetId()
   fullName: CRMScript.NetServer.NSReasonStalled.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the ReasonStalled<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSReasonStalled thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the ReasonStalled<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSReasonStalled thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSReasonStalled.SetId(Integer)
   fullName: CRMScript.NetServer.NSReasonStalled.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the ReasonStalled\n"
+  summary: "\nSet the primary key (ID) for the ReasonStalled\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
