--- a/docs/api-reference/CRMScript.NetServer.NSRole.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRole.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSRole.GetId()
   fullName: CRMScript.NetServer.NSRole.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the Role<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSRole thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the Role<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSRole thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSRole.SetId(Integer)
   fullName: CRMScript.NetServer.NSRole.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the Role\n"
+  summary: "\nSet the primary key (ID) for the Role\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
