--- a/docs/api-reference/CRMScript.NetServer.NSSource.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSource.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSSource.GetId()
   fullName: CRMScript.NetServer.NSSource.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the Source<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSSource thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the Source<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSSource thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSSource.SetId(Integer)
   fullName: CRMScript.NetServer.NSSource.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the Source\n"
+  summary: "\nSet the primary key (ID) for the Source\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
