--- a/docs/api-reference/CRMScript.NetServer.NSTask.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTask.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSTask.GetId()
   fullName: CRMScript.NetServer.NSTask.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the Task<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTask thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the Task<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTask thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSTask.SetId(Integer)
   fullName: CRMScript.NetServer.NSTask.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the Task\n"
+  summary: "\nSet the primary key (ID) for the Task\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
