--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -41,6 +41,7 @@ items:
   - CRMScript.NetServer.ContactSourceType
   - CRMScript.NetServer.copyMembers
   - CRMScript.NetServer.countryId
+  - CRMScript.NetServer.CredentialControlType
   - CRMScript.NetServer.crmActorType
   - CRMScript.NetServer.dataRightValue
   - CRMScript.NetServer.defaultVideomeetingStatus
@@ -172,9 +173,7 @@ items:
   - CRMScript.NetServer.NSCurrencyEntity
   - CRMScript.NetServer.NSCustomerCenterConfig
   - CRMScript.NetServer.NSCustomerLanguage
-  - CRMScript.NetServer.NSCustomerLanguageList
   - CRMScript.NetServer.NSCustomerServiceAgent
-  - CRMScript.NetServer.NSCustomerServiceConfig
   - CRMScript.NetServer.NSCustomerServiceStartup
   - CRMScript.NetServer.NSDashboard
   - CRMScript.NetServer.NSDashboardAgent
@@ -617,7 +616,6 @@ items:
   - CRMScript.NetServer.urlEncoding
   - CRMScript.NetServer.userGroupId
   - CRMScript.NetServer.userValueOverride
-  - CRMScript.NetServer.valueControl
   - CRMScript.NetServer.valueType
   - CRMScript.NetServer.visibility
   - CRMScript.NetServer.visibleIn
@@ -1282,12 +1280,12 @@ references:
   name: NSCredentialType
   nameWithType: NSCredentialType
   fullName: CRMScript.NetServer.NSCredentialType
-- uid: CRMScript.NetServer.valueControl
-  commentId: T:CRMScript.NetServer.valueControl
+- uid: CRMScript.NetServer.CredentialControlType
+  commentId: T:CRMScript.NetServer.CredentialControlType
   isExternal: true
-  name: valueControl
-  nameWithType: valueControl
-  fullName: CRMScript.NetServer.valueControl
+  name: CredentialControlType
+  nameWithType: CredentialControlType
+  fullName: CRMScript.NetServer.CredentialControlType
 - uid: CRMScript.NetServer.NSCredentialUser
   commentId: T:CRMScript.NetServer.NSCredentialUser
   isExternal: true
@@ -1360,12 +1358,6 @@ references:
   name: NSCustomerLanguage
   nameWithType: NSCustomerLanguage
   fullName: CRMScript.NetServer.NSCustomerLanguage
-- uid: CRMScript.NetServer.NSCustomerLanguageList
-  commentId: T:CRMScript.NetServer.NSCustomerLanguageList
-  isExternal: true
-  name: NSCustomerLanguageList
-  nameWithType: NSCustomerLanguageList
-  fullName: CRMScript.NetServer.NSCustomerLanguageList
 - uid: CRMScript.NetServer.NSCustomerServiceAgent
   commentId: T:CRMScript.NetServer.NSCustomerServiceAgent
   isExternal: true
@@ -1378,12 +1370,6 @@ references:
   name: eventHandlerType
   nameWithType: eventHandlerType
   fullName: CRMScript.NetServer.eventHandlerType
-- uid: CRMScript.NetServer.NSCustomerServiceConfig
-  commentId: T:CRMScript.NetServer.NSCustomerServiceConfig
-  isExternal: true
-  name: NSCustomerServiceConfig
-  nameWithType: NSCustomerServiceConfig
-  fullName: CRMScript.NetServer.NSCustomerServiceConfig
 - uid: CRMScript.NetServer.NSCustomerServiceStartup
   commentId: T:CRMScript.NetServer.NSCustomerServiceStartup
   isExternal: true
