--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -320,12 +320,8 @@ items:
     href: CRMScript.NetServer.NSCustomerCenterConfig.yml
   - name: NSCustomerLanguage
     href: CRMScript.NetServer.NSCustomerLanguage.yml
-  - name: NSCustomerLanguageList
-    href: CRMScript.NetServer.NSCustomerLanguageList.yml
   - name: NSCustomerServiceAgent
     href: CRMScript.NetServer.NSCustomerServiceAgent.yml
-  - name: NSCustomerServiceConfig
-    href: CRMScript.NetServer.NSCustomerServiceConfig.yml
   - name: NSCustomerServiceStartup
     href: CRMScript.NetServer.NSCustomerServiceStartup.yml
   - name: NSDashboard
@@ -1176,6 +1172,8 @@ items:
       href: CRMScript.NetServer.copyMembers.yml
     - name: Enum countryId
       href: CRMScript.NetServer.countryId.yml
+    - name: CredentialControlType
+      href: CRMScript.NetServer.CredentialControlType.yml
     - name: Enum crmActorType
       href: CRMScript.NetServer.crmActorType.yml
     - name: Enum dataRightValue
@@ -1364,8 +1362,6 @@ items:
       href: CRMScript.NetServer.userGroupId.yml
     - name: Enum userValueOverride
       href: CRMScript.NetServer.userValueOverride.yml
-    - name: Enum valueControl
-      href: CRMScript.NetServer.valueControl.yml
     - name: Enum valueType
       href: CRMScript.NetServer.valueType.yml
     - name: Enum visibility
