--- a/docs/api-reference/CRMScript.NetServer.NSBusiness.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBusiness.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSBusiness.GetId()
   fullName: CRMScript.NetServer.NSBusiness.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSBusiness<p></p>\n<strong>Returns:</strong>Integer NSBusiness id.<p></p>\n<pre><code>NSBusiness thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSBusiness<p></p>\n<strong>Returns:</strong>Integer NSBusiness id.<p></p>\n<pre><code>NSBusiness thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSBusiness.SetId(Integer)
   fullName: CRMScript.NetServer.NSBusiness.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSBusiness\n"
+  summary: "\nSet the primary key (ID) for the NSBusiness\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
