--- a/docs/api-reference/CRMScript.NetServer.NSCRMScriptResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCRMScriptResult.yml
@@ -3,13 +3,12 @@ items:
 - uid: CRMScript.NetServer.NSCRMScriptResult
   commentId: T:CRMScript.NetServer.NSCRMScriptResult
   id: NSCRMScriptResult
-  so.intellisense: Void.NSCRMScriptResult
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCRMScriptResult.#ctor
   - CRMScript.NetServer.NSCRMScriptResult.GetErrorMessage()
   - CRMScript.NetServer.NSCRMScriptResult.GetValid()
-  - CRMScript.NetServer.NSCRMScriptResult.#ctor
   - CRMScript.NetServer.NSCRMScriptResult.SetErrorMessage(String)
   - CRMScript.NetServer.NSCRMScriptResult.SetValid(Bool)
   name: NSCRMScriptResult
@@ -18,44 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCRMScriptResult.GetErrorMessage()
-  commentId: M:CRMScript.NetServer.NSCRMScriptResult.GetErrorMessage()
-  id: 'GetErrorMessage()'
-  so.intellisense: NSCRMScriptResult.GetErrorMessage
-  langs:
-  - crmscript
-  name: 'GetErrorMessage()'
-  nameWithType: NSCRMScriptResult.GetErrorMessage()
-  fullName: CRMScript.NetServer.NSCRMScriptResult.GetErrorMessage()
-  type: Method
-  summary: "\nContains the error message for a non-valide CRMScript<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCRMScriptResult thing;\nString errorMessage = thing.GetErrorMessage();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetErrorMessage()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCRMScriptResult thing;\nString errorMessage = thing.GetErrorMessage();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCRMScriptResult.GetValid()
-  commentId: M:CRMScript.NetServer.NSCRMScriptResult.GetValid()
-  id: 'GetValid()'
-  so.intellisense: NSCRMScriptResult.GetValid
-  langs:
-  - crmscript
-  name: 'GetValid()'
-  nameWithType: NSCRMScriptResult.GetValid()
-  fullName: CRMScript.NetServer.NSCRMScriptResult.GetValid()
-  type: Method
-  summary: "\nTrue if the CRMScript was successfully validated. If false, see the error message for details<p></p>\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSCRMScriptResult thing;\nBool valid = thing.GetValid();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Bool GetValid()
-    parameters:
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSCRMScriptResult thing;\nBool valid = thing.GetValid();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCRMScriptResult.#ctor
   commentId: M:CRMScript.NetServer.NSCRMScriptResult.#ctor
   id: '#ctor'
@@ -71,6 +32,46 @@ items:
   syntax: 
     content: NSCRMScriptResult
   example: 
+- uid: CRMScript.NetServer.NSCRMScriptResult.GetErrorMessage()
+  commentId: M:CRMScript.NetServer.NSCRMScriptResult.GetErrorMessage()
+  id: 'GetErrorMessage()'
+  so.intellisense: NSCRMScriptResult.GetErrorMessage
+  langs:
+  - crmscript
+  name: 'GetErrorMessage()'
+  nameWithType: NSCRMScriptResult.GetErrorMessage()
+  fullName: CRMScript.NetServer.NSCRMScriptResult.GetErrorMessage()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetErrorMessage()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The error message for a non-valid CRMScript
+  example: 
+  - "\n<pre><code>NSCRMScriptResult thing;\nString errorMessage = thing.GetErrorMessage();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCRMScriptResult.GetValid()
+  commentId: M:CRMScript.NetServer.NSCRMScriptResult.GetValid()
+  id: 'GetValid()'
+  so.intellisense: NSCRMScriptResult.GetValid
+  langs:
+  - crmscript
+  name: 'GetValid()'
+  nameWithType: NSCRMScriptResult.GetValid()
+  fullName: CRMScript.NetServer.NSCRMScriptResult.GetValid()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetValid()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: True if the CRMScript was successfully validated. If false, see the error message for details
+  example: 
+  - "\n<pre><code>NSCRMScriptResult thing;\nBool valid = thing.GetValid();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCRMScriptResult.SetErrorMessage(String)
   commentId: M:CRMScript.NetServer.NSCRMScriptResult.SetErrorMessage(String)
   id: 'SetErrorMessage(String)'
@@ -81,14 +82,16 @@ items:
   nameWithType: NSCRMScriptResult.SetErrorMessage(String)
   fullName: CRMScript.NetServer.NSCRMScriptResult.SetErrorMessage(String)
   type: Method
-  summary: "\nContains the error message for a non-valide CRMScript\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetErrorMessage(String errorMessage)
+    content: Void SetErrorMessage(String errorMessage)
     parameters:
     - id: errorMessage
       type: CRMScript.Global.String
-      description: 
+      description: The error message for a non-valid CRMScript
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCRMScriptResult thing;\nString errorMessage;\nthing.SetErrorMessage(errorMessage);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCRMScriptResult.SetValid(Bool)
@@ -101,14 +104,16 @@ items:
   nameWithType: NSCRMScriptResult.SetValid(Bool)
   fullName: CRMScript.NetServer.NSCRMScriptResult.SetValid(Bool)
   type: Method
-  summary: "\nTrue if the CRMScript was successfully validated. If false, see the error message for details\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetValid(Bool valid)
+    content: Void SetValid(Bool valid)
     parameters:
     - id: valid
       type: CRMScript.Global.Bool
-      description: 
+      description: True if the CRMScript was successfully validated. If false, see the error message for details
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCRMScriptResult thing;\nBool valid;\nthing.SetValid(valid);</code></pre>\n"
 references:
@@ -130,3 +135,9 @@ references:
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
