--- a/docs/api-reference/CRMScript.NetServer.NSCredential.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredential.yml
@@ -3,14 +3,13 @@ items:
 - uid: CRMScript.NetServer.NSCredential
   commentId: T:CRMScript.NetServer.NSCredential
   id: NSCredential
-  so.intellisense: Void.NSCredential
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCredential.#ctor
   - CRMScript.NetServer.NSCredential.GetDisplayValue()
   - CRMScript.NetServer.NSCredential.GetType()
   - CRMScript.NetServer.NSCredential.GetValue()
-  - CRMScript.NetServer.NSCredential.#ctor
   - CRMScript.NetServer.NSCredential.SetDisplayValue(String)
   - CRMScript.NetServer.NSCredential.SetType()
   - CRMScript.NetServer.NSCredential.SetValue(String)
@@ -20,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCredential.GetDisplayValue()
-  commentId: M:CRMScript.NetServer.NSCredential.GetDisplayValue()
-  id: 'GetDisplayValue()'
-  so.intellisense: NSCredential.GetDisplayValue
-  langs:
-  - crmscript
-  name: 'GetDisplayValue()'
-  nameWithType: NSCredential.GetDisplayValue()
-  fullName: CRMScript.NetServer.NSCredential.GetDisplayValue()
-  type: Method
-  summary: "\nThe value displayed to the user. this will typically be the users login name in active directory.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCredential thing;\nString displayValue = thing.GetDisplayValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayValue()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCredential thing;\nString displayValue = thing.GetDisplayValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredential.GetType()
-  commentId: M:CRMScript.NetServer.NSCredential.GetType()
-  id: 'GetType()'
-  so.intellisense: NSCredential.GetType
-  langs:
-  - crmscript
-  name: 'GetType()'
-  nameWithType: NSCredential.GetType()
-  fullName: CRMScript.NetServer.NSCredential.GetType()
-  type: Method
-  summary: "\nDescription of credential type<p></p>\n<strong>Returns:</strong>NSCredentialType<p></p>\n<pre><code>NSCredential thing;\nNSCredentialType type = thing.GetType();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSCredentialType GetType()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSCredentialType
-  example: 
-  - "\n<pre><code>NSCredential thing;\nNSCredentialType type = thing.GetType();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredential.GetValue()
-  commentId: M:CRMScript.NetServer.NSCredential.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSCredential.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSCredential.GetValue()
-  fullName: CRMScript.NetServer.NSCredential.GetValue()
-  type: Method
-  summary: "\nThis is the actuall value of the credentials.  This will typically be the password or teh users SID in active directory<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCredential thing;\nString value = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCredential thing;\nString value = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredential.#ctor
   commentId: M:CRMScript.NetServer.NSCredential.#ctor
   id: '#ctor'
@@ -92,6 +34,66 @@ items:
   syntax: 
     content: NSCredential
   example: 
+- uid: CRMScript.NetServer.NSCredential.GetDisplayValue()
+  commentId: M:CRMScript.NetServer.NSCredential.GetDisplayValue()
+  id: 'GetDisplayValue()'
+  so.intellisense: NSCredential.GetDisplayValue
+  langs:
+  - crmscript
+  name: 'GetDisplayValue()'
+  nameWithType: NSCredential.GetDisplayValue()
+  fullName: CRMScript.NetServer.NSCredential.GetDisplayValue()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDisplayValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The value displayed to the user. This will typically be the users login name in active directory.
+  example: 
+  - "\n<pre><code>NSCredential thing;\nString displayValue = thing.GetDisplayValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCredential.GetType()
+  commentId: M:CRMScript.NetServer.NSCredential.GetType()
+  id: 'GetType()'
+  so.intellisense: NSCredential.GetType
+  langs:
+  - crmscript
+  name: 'GetType()'
+  nameWithType: NSCredential.GetType()
+  fullName: CRMScript.NetServer.NSCredential.GetType()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSCredentialType GetType()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSCredentialType
+      description: Description of credential type
+  example: 
+  - "\n<pre><code>NSCredential thing;\nNSCredentialType type = thing.GetType();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCredential.GetValue()
+  commentId: M:CRMScript.NetServer.NSCredential.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSCredential.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSCredential.GetValue()
+  fullName: CRMScript.NetServer.NSCredential.GetValue()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The actual value of the credentials. Typically the password or the users SID in active directory
+  example: 
+  - "\n<pre><code>NSCredential thing;\nString value = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredential.SetDisplayValue(String)
   commentId: M:CRMScript.NetServer.NSCredential.SetDisplayValue(String)
   id: 'SetDisplayValue(String)'
@@ -102,14 +104,16 @@ items:
   nameWithType: NSCredential.SetDisplayValue(String)
   fullName: CRMScript.NetServer.NSCredential.SetDisplayValue(String)
   type: Method
-  summary: "\nThe value displayed to the user. this will typically be the users login name in active directory.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetDisplayValue(String displayValue)
+    content: Void SetDisplayValue(String displayValue)
     parameters:
     - id: displayValue
       type: CRMScript.Global.String
-      description: 
+      description: The value displayed to the user. Typically the user's login name in active directory.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredential thing;\nString displayValue;\nthing.SetDisplayValue(displayValue);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredential.SetType()
@@ -122,11 +126,16 @@ items:
   nameWithType: NSCredential.SetType()
   fullName: CRMScript.NetServer.NSCredential.SetType()
   type: Method
-  summary: "\nDescription of credential type\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetType(NSCredentialType type)
+    content: Void SetType(NSCredentialType type)
     parameters:
+    - id: type
+      type: CRMScript.NetServer.NSCredentialType
+      description: Description of credential type
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredential thing;\nNSCredentialType type;\nthing.SetType(type);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredential.SetValue(String)
@@ -139,14 +148,16 @@ items:
   nameWithType: NSCredential.SetValue(String)
   fullName: CRMScript.NetServer.NSCredential.SetValue(String)
   type: Method
-  summary: "\nThis is the actuall value of the credentials.  This will typically be the password or teh users SID in active directory\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetValue(String value)
+    content: Void SetValue(String value)
     parameters:
     - id: value
       type: CRMScript.Global.String
-      description: 
+      description: This is the actual value of the credentials. Typically the password or the user's SID in active directory
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredential thing;\nString value;\nthing.SetValue(value);</code></pre>\n"
 references:
@@ -168,3 +179,9 @@ references:
   name: NSCredentialType
   nameWithType: NSCredentialType
   fullName: CRMScript.NetServer.NSCredentialType
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
