--- a/docs/api-reference/CRMScript.NetServer.NSCredentialType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialType.yml
@@ -3,17 +3,16 @@ items:
 - uid: CRMScript.NetServer.NSCredentialType
   commentId: T:CRMScript.NetServer.NSCredentialType
   id: NSCredentialType
-  so.intellisense: Void.NSCredentialType
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCredentialType.#ctor
   - CRMScript.NetServer.NSCredentialType.GetCanCreatePerson()
   - CRMScript.NetServer.NSCredentialType.GetDescription()
   - CRMScript.NetServer.NSCredentialType.GetDisplayType()
   - CRMScript.NetServer.NSCredentialType.GetIsUserNameSupported()
   - CRMScript.NetServer.NSCredentialType.GetType()
   - CRMScript.NetServer.NSCredentialType.GetValueControl()
-  - CRMScript.NetServer.NSCredentialType.#ctor
   - CRMScript.NetServer.NSCredentialType.SetCanCreatePerson(Bool)
   - CRMScript.NetServer.NSCredentialType.SetDescription(String)
   - CRMScript.NetServer.NSCredentialType.SetDisplayType(String)
@@ -26,120 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCredentialType.GetCanCreatePerson()
-  commentId: M:CRMScript.NetServer.NSCredentialType.GetCanCreatePerson()
-  id: 'GetCanCreatePerson()'
-  so.intellisense: NSCredentialType.GetCanCreatePerson
-  langs:
-  - crmscript
-  name: 'GetCanCreatePerson()'
-  nameWithType: NSCredentialType.GetCanCreatePerson()
-  fullName: CRMScript.NetServer.NSCredentialType.GetCanCreatePerson()
-  type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSCredentialType thing;\nBool canCreatePerson = thing.GetCanCreatePerson();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Bool GetCanCreatePerson()
-    parameters:
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSCredentialType thing;\nBool canCreatePerson = thing.GetCanCreatePerson();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredentialType.GetDescription()
-  commentId: M:CRMScript.NetServer.NSCredentialType.GetDescription()
-  id: 'GetDescription()'
-  so.intellisense: NSCredentialType.GetDescription
-  langs:
-  - crmscript
-  name: 'GetDescription()'
-  nameWithType: NSCredentialType.GetDescription()
-  fullName: CRMScript.NetServer.NSCredentialType.GetDescription()
-  type: Method
-  summary: "\nDescription of the authentication type.  This value is used in a list of authentication providers that can be choosen by an end user and should be a fairly describtive text.  This will typically be SuperOffice is responsible for username and password for a password scenario.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCredentialType thing;\nString description = thing.GetDescription();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetDescription()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCredentialType thing;\nString description = thing.GetDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredentialType.GetDisplayType()
-  commentId: M:CRMScript.NetServer.NSCredentialType.GetDisplayType()
-  id: 'GetDisplayType()'
-  so.intellisense: NSCredentialType.GetDisplayType
-  langs:
-  - crmscript
-  name: 'GetDisplayType()'
-  nameWithType: NSCredentialType.GetDisplayType()
-  fullName: CRMScript.NetServer.NSCredentialType.GetDisplayType()
-  type: Method
-  summary: "\nThe name of the credentials to be displayed in the user interface.  This will typically be Password for user-name/password scenarios and Active Directoru User for AD integration.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCredentialType thing;\nString displayType = thing.GetDisplayType();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayType()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCredentialType thing;\nString displayType = thing.GetDisplayType();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredentialType.GetIsUserNameSupported()
-  commentId: M:CRMScript.NetServer.NSCredentialType.GetIsUserNameSupported()
-  id: 'GetIsUserNameSupported()'
-  so.intellisense: NSCredentialType.GetIsUserNameSupported
-  langs:
-  - crmscript
-  name: 'GetIsUserNameSupported()'
-  nameWithType: NSCredentialType.GetIsUserNameSupported()
-  fullName: CRMScript.NetServer.NSCredentialType.GetIsUserNameSupported()
-  type: Method
-  summary: "\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSCredentialType thing;\nBool isUserNameSupported = thing.GetIsUserNameSupported();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsUserNameSupported()
-    parameters:
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSCredentialType thing;\nBool isUserNameSupported = thing.GetIsUserNameSupported();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredentialType.GetType()
-  commentId: M:CRMScript.NetServer.NSCredentialType.GetType()
-  id: 'GetType()'
-  so.intellisense: NSCredentialType.GetType
-  langs:
-  - crmscript
-  name: 'GetType()'
-  nameWithType: NSCredentialType.GetType()
-  fullName: CRMScript.NetServer.NSCredentialType.GetType()
-  type: Method
-  summary: "\nType of credentials, corresponding to name of plugin and type in the credentials table<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCredentialType thing;\nString type = thing.GetType();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetType()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCredentialType thing;\nString type = thing.GetType();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredentialType.GetValueControl()
-  commentId: M:CRMScript.NetServer.NSCredentialType.GetValueControl()
-  id: 'GetValueControl()'
-  so.intellisense: NSCredentialType.GetValueControl
-  langs:
-  - crmscript
-  name: 'GetValueControl()'
-  nameWithType: NSCredentialType.GetValueControl()
-  fullName: CRMScript.NetServer.NSCredentialType.GetValueControl()
-  type: Method
-  summary: "\nType of control used to display the value.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<ul><li>Enum: 0 = Static</li><li>Enum: 1 = Edit</li><li>Enum: 2 = Password</li><li>Enum: 3 = Link</li><li>Enum: 4 = Hidden</li></ul><pre><code>NSCredentialType thing;\nInteger valueControl = thing.GetValueControl();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetValueControl()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSCredentialType thing;\nInteger valueControl = thing.GetValueControl();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialType.#ctor
   commentId: M:CRMScript.NetServer.NSCredentialType.#ctor
   id: '#ctor'
@@ -155,6 +40,126 @@ items:
   syntax: 
     content: NSCredentialType
   example: 
+- uid: CRMScript.NetServer.NSCredentialType.GetCanCreatePerson()
+  commentId: M:CRMScript.NetServer.NSCredentialType.GetCanCreatePerson()
+  id: 'GetCanCreatePerson()'
+  so.intellisense: NSCredentialType.GetCanCreatePerson
+  langs:
+  - crmscript
+  name: 'GetCanCreatePerson()'
+  nameWithType: NSCredentialType.GetCanCreatePerson()
+  fullName: CRMScript.NetServer.NSCredentialType.GetCanCreatePerson()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetCanCreatePerson()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: 
+  example: 
+  - "\n<pre><code>NSCredentialType thing;\nBool canCreatePerson = thing.GetCanCreatePerson();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCredentialType.GetDescription()
+  commentId: M:CRMScript.NetServer.NSCredentialType.GetDescription()
+  id: 'GetDescription()'
+  so.intellisense: NSCredentialType.GetDescription
+  langs:
+  - crmscript
+  name: 'GetDescription()'
+  nameWithType: NSCredentialType.GetDescription()
+  fullName: CRMScript.NetServer.NSCredentialType.GetDescription()
+  type: Method
+  summary: ""
+  remarks: "\nThis value is used in a list of authentication providers that can be chosen by an end user and should be a fairly descriptive text. This will typically be SuperOffice is responsible for username and password for a password scenario.\n"
+  syntax: 
+    content: String GetDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Description of the authentication type.
+  example: 
+  - "\n<pre><code>NSCredentialType thing;\nString description = thing.GetDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCredentialType.GetDisplayType()
+  commentId: M:CRMScript.NetServer.NSCredentialType.GetDisplayType()
+  id: 'GetDisplayType()'
+  so.intellisense: NSCredentialType.GetDisplayType
+  langs:
+  - crmscript
+  name: 'GetDisplayType()'
+  nameWithType: NSCredentialType.GetDisplayType()
+  fullName: CRMScript.NetServer.NSCredentialType.GetDisplayType()
+  type: Method
+  summary: ""
+  remarks: "\nThis will typically be Password for user-name/password scenarios and Active Directory User for AD integration.\n"
+  syntax: 
+    content: String GetDisplayType()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the credentials to be displayed in the user interface.
+  example: 
+  - "\n<pre><code>NSCredentialType thing;\nString displayType = thing.GetDisplayType();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCredentialType.GetIsUserNameSupported()
+  commentId: M:CRMScript.NetServer.NSCredentialType.GetIsUserNameSupported()
+  id: 'GetIsUserNameSupported()'
+  so.intellisense: NSCredentialType.GetIsUserNameSupported
+  langs:
+  - crmscript
+  name: 'GetIsUserNameSupported()'
+  nameWithType: NSCredentialType.GetIsUserNameSupported()
+  fullName: CRMScript.NetServer.NSCredentialType.GetIsUserNameSupported()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetIsUserNameSupported()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: 
+  example: 
+  - "\n<pre><code>NSCredentialType thing;\nBool isUserNameSupported = thing.GetIsUserNameSupported();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCredentialType.GetType()
+  commentId: M:CRMScript.NetServer.NSCredentialType.GetType()
+  id: 'GetType()'
+  so.intellisense: NSCredentialType.GetType
+  langs:
+  - crmscript
+  name: 'GetType()'
+  nameWithType: NSCredentialType.GetType()
+  fullName: CRMScript.NetServer.NSCredentialType.GetType()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetType()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Type of credentials, corresponding to name of plugin and type in the credentials table
+  example: 
+  - "\n<pre><code>NSCredentialType thing;\nString type = thing.GetType();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCredentialType.GetValueControl()
+  commentId: M:CRMScript.NetServer.NSCredentialType.GetValueControl()
+  id: 'GetValueControl()'
+  so.intellisense: NSCredentialType.GetValueControl
+  langs:
+  - crmscript
+  name: 'GetValueControl()'
+  nameWithType: NSCredentialType.GetValueControl()
+  fullName: CRMScript.NetServer.NSCredentialType.GetValueControl()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetValueControl()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Type of control used to display the value. See <xref href=\"CRMScript.NetServer.CredentialControlType\" data-throw-if-not-resolved=\"false\"></xref>.
+  example: 
+  - "\n<pre><code>NSCredentialType thing;\nInteger valueControl = thing.GetValueControl();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialType.SetCanCreatePerson(Bool)
   commentId: M:CRMScript.NetServer.NSCredentialType.SetCanCreatePerson(Bool)
   id: 'SetCanCreatePerson(Bool)'
@@ -168,11 +173,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetCanCreatePerson(Bool canCreatePerson)
+    content: Void SetCanCreatePerson(Bool canCreatePerson)
     parameters:
     - id: canCreatePerson
       type: CRMScript.Global.Bool
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialType thing;\nBool canCreatePerson;\nthing.SetCanCreatePerson(canCreatePerson);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialType.SetDescription(String)
@@ -185,14 +192,16 @@ items:
   nameWithType: NSCredentialType.SetDescription(String)
   fullName: CRMScript.NetServer.NSCredentialType.SetDescription(String)
   type: Method
-  summary: "\nDescription of the authentication type.  This value is used in a list of authentication providers that can be choosen by an end user and should be a fairly describtive text.  This will typically be SuperOffice is responsible for username and password for a password scenario.\n"
-  remarks: 
+  summary: "\n\n"
+  remarks: "\nThis value is used in a list of authentication providers that can be chosen by an end user and should be a fairly descriptive text. This will typically be SuperOffice is responsible for username and password for a password scenario.\n"
   syntax: 
-    content: SetDescription(String description)
+    content: Void SetDescription(String description)
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description: 
+      description: Description of the authentication type.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialType thing;\nString description;\nthing.SetDescription(description);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialType.SetDisplayType(String)
@@ -205,14 +214,16 @@ items:
   nameWithType: NSCredentialType.SetDisplayType(String)
   fullName: CRMScript.NetServer.NSCredentialType.SetDisplayType(String)
   type: Method
-  summary: "\nThe name of the credentials to be displayed in the user interface.  This will typically be Password for user-name/password scenarios and Active Directoru User for AD integration.\n"
-  remarks: 
+  summary: "\n\n"
+  remarks: "\nThis will typically be Password for user-name/password scenarios and Active Directory User for AD integration.\n"
   syntax: 
-    content: SetDisplayType(String displayType)
+    content: Void SetDisplayType(String displayType)
     parameters:
     - id: displayType
       type: CRMScript.Global.String
-      description: 
+      description: The name of the credentials to be displayed in the user interface.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialType thing;\nString displayType;\nthing.SetDisplayType(displayType);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialType.SetIsUserNameSupported(Bool)
@@ -228,11 +239,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetIsUserNameSupported(Bool isUserNameSupported)
+    content: Void SetIsUserNameSupported(Bool isUserNameSupported)
     parameters:
     - id: isUserNameSupported
       type: CRMScript.Global.Bool
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialType thing;\nBool isUserNameSupported;\nthing.SetIsUserNameSupported(isUserNameSupported);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialType.SetType(String)
@@ -245,14 +258,16 @@ items:
   nameWithType: NSCredentialType.SetType(String)
   fullName: CRMScript.NetServer.NSCredentialType.SetType(String)
   type: Method
-  summary: "\nType of credentials, corresponding to name of plugin and type in the credentials table\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetType(String type)
+    content: Void SetType(String type)
     parameters:
     - id: type
       type: CRMScript.Global.String
-      description: 
+      description: Type of credentials, corresponding to name of plugin and type in the credentials table
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialType thing;\nString type;\nthing.SetType(type);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialType.SetValueControl(Integer)
@@ -265,14 +280,16 @@ items:
   nameWithType: NSCredentialType.SetValueControl(Integer)
   fullName: CRMScript.NetServer.NSCredentialType.SetValueControl(Integer)
   type: Method
-  summary: "\nType of control used to display the value.\n"
-  remarks: "\n<p>See enum valueControl.</p>\n"
+  summary: "\n\n"
+  remarks: 
   syntax: 
-    content: SetValueControl(Integer valueControl)
+    content: Void SetValueControl(Integer valueControl)
     parameters:
     - id: valueControl
       type: CRMScript.Global.Integer
-      description: 
+      description: Type of control used to display the value. See <xref href=\"CRMScript.NetServer.CredentialControlType\" data-throw-if-not-resolved=\"false\"></xref>.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialType thing;\nInteger valueControl;\nthing.SetValueControl(valueControl);</code></pre>\n"
 references:
@@ -300,3 +317,15 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.CredentialControlType
+  commentId: T:CRMScript.NetServer.CredentialControlType
+  isExternal: true
+  name: CredentialControlType
+  nameWithType: CredentialControlType
+  fullName: CRMScript.NetServer.CredentialControlType
