--- a/docs/api-reference/CRMScript.NetServer.NSCredentialsGroupUsers.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialsGroupUsers.yml
@@ -3,59 +3,20 @@ items:
 - uid: CRMScript.NetServer.NSCredentialsGroupUsers
   commentId: T:CRMScript.NetServer.NSCredentialsGroupUsers
   id: NSCredentialsGroupUsers
-  so.intellisense: Void.NSCredentialsGroupUsers
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCredentialsGroupUsers.#ctor
   - CRMScript.NetServer.NSCredentialsGroupUsers.GetHeadings()
   - CRMScript.NetServer.NSCredentialsGroupUsers.GetUsers()
-  - CRMScript.NetServer.NSCredentialsGroupUsers.#ctor
   - CRMScript.NetServer.NSCredentialsGroupUsers.SetHeadings(String[])
-  - CRMScript.NetServer.NSCredentialsGroupUsers.SetUsers()
+  - CRMScript.NetServer.NSCredentialsGroupUsers.SetUsers(NSCredentialUser[])
   name: NSCredentialsGroupUsers
   nameWithType: NSCredentialsGroupUsers
   fullName: CRMScript.NetServer.NSCredentialsGroupUsers
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCredentialsGroupUsers.GetHeadings()
-  commentId: M:CRMScript.NetServer.NSCredentialsGroupUsers.GetHeadings()
-  id: 'GetHeadings()'
-  so.intellisense: NSCredentialsGroupUsers.GetHeadings
-  langs:
-  - crmscript
-  name: 'GetHeadings()'
-  nameWithType: NSCredentialsGroupUsers.GetHeadings()
-  fullName: CRMScript.NetServer.NSCredentialsGroupUsers.GetHeadings()
-  type: Method
-  summary: "\nHeadings in which to list the different users.<p></p>\n<strong>Returns:</strong>String[]<p></p>\n<pre><code>NSCredentialsGroupUsers thing;\nString[] headings = thing.GetHeadings();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String[] GetHeadings()
-    parameters:
-    return:
-      type: CRMScript.Global.String[]
-  example: 
-  - "\n<pre><code>NSCredentialsGroupUsers thing;\nString[] headings = thing.GetHeadings();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredentialsGroupUsers.GetUsers()
-  commentId: M:CRMScript.NetServer.NSCredentialsGroupUsers.GetUsers()
-  id: 'GetUsers()'
-  so.intellisense: NSCredentialsGroupUsers.GetUsers
-  langs:
-  - crmscript
-  name: 'GetUsers()'
-  nameWithType: NSCredentialsGroupUsers.GetUsers()
-  fullName: CRMScript.NetServer.NSCredentialsGroupUsers.GetUsers()
-  type: Method
-  summary: "\nThe list of actual users that can be selected<p></p>\n<strong>Returns:</strong>NSCredentialUser[]<p></p>\n<pre><code>NSCredentialsGroupUsers thing;\nNSCredentialUser[] users = thing.GetUsers();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSCredentialUser[] GetUsers()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSCredentialUser[]
-  example: 
-  - "\n<pre><code>NSCredentialsGroupUsers thing;\nNSCredentialUser[] users = thing.GetUsers();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialsGroupUsers.#ctor
   commentId: M:CRMScript.NetServer.NSCredentialsGroupUsers.#ctor
   id: '#ctor'
@@ -71,6 +32,46 @@ items:
   syntax: 
     content: NSCredentialsGroupUsers
   example: 
+- uid: CRMScript.NetServer.NSCredentialsGroupUsers.GetHeadings()
+  commentId: M:CRMScript.NetServer.NSCredentialsGroupUsers.GetHeadings()
+  id: 'GetHeadings()'
+  so.intellisense: NSCredentialsGroupUsers.GetHeadings
+  langs:
+  - crmscript
+  name: 'GetHeadings()'
+  nameWithType: NSCredentialsGroupUsers.GetHeadings()
+  fullName: CRMScript.NetServer.NSCredentialsGroupUsers.GetHeadings()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String[] GetHeadings()
+    parameters: []
+    return:
+      type: CRMScript.Global.String[]
+      description: Headings in which to list the different users.
+  example: 
+  - "\n<pre><code>NSCredentialsGroupUsers thing;\nString[] headings = thing.GetHeadings();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCredentialsGroupUsers.GetUsers()
+  commentId: M:CRMScript.NetServer.NSCredentialsGroupUsers.GetUsers()
+  id: 'GetUsers()'
+  so.intellisense: NSCredentialsGroupUsers.GetUsers
+  langs:
+  - crmscript
+  name: 'GetUsers()'
+  nameWithType: NSCredentialsGroupUsers.GetUsers()
+  fullName: CRMScript.NetServer.NSCredentialsGroupUsers.GetUsers()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSCredentialUser[] GetUsers()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSCredentialUser[]
+      description: The list of actual users that can be selected
+  example: 
+  - "\n<pre><code>NSCredentialsGroupUsers thing;\nNSCredentialUser[] users = thing.GetUsers();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCredentialsGroupUsers.SetHeadings(String[])
   commentId: M:CRMScript.NetServer.NSCredentialsGroupUsers.SetHeadings(String[])
   id: 'SetHeadings(String[])'
@@ -81,31 +82,38 @@ items:
   nameWithType: NSCredentialsGroupUsers.SetHeadings(String[])
   fullName: CRMScript.NetServer.NSCredentialsGroupUsers.SetHeadings(String[])
   type: Method
-  summary: "\nHeadings in which to list the different users.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetHeadings(String[] headings)
+    content: Void SetHeadings(String[] headings)
     parameters:
     - id: headings
       type: CRMScript.Global.String[]
-      description: 
+      description: Headings in which to list the different users.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialsGroupUsers thing;\nString[] headings;\nthing.SetHeadings(headings);</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredentialsGroupUsers.SetUsers()
-  commentId: M:CRMScript.NetServer.NSCredentialsGroupUsers.SetUsers()
-  id: 'SetUsers()'
+- uid: CRMScript.NetServer.NSCredentialsGroupUsers.SetUsers(NSCredentialUser[])
+  commentId: M:CRMScript.NetServer.NSCredentialsGroupUsers.SetUsers(NSCredentialUser[])
+  id: 'SetUsers(NSCredentialUser[])'
   so.intellisense: NSCredentialsGroupUsers.SetUsers
   langs:
   - crmscript
-  name: 'SetUsers()'
-  nameWithType: NSCredentialsGroupUsers.SetUsers()
-  fullName: CRMScript.NetServer.NSCredentialsGroupUsers.SetUsers()
+  name: 'SetUsers(NSCredentialUser[])'
+  nameWithType: NSCredentialsGroupUsers.SetUsers(NSCredentialUser[])
+  fullName: CRMScript.NetServer.NSCredentialsGroupUsers.SetUsers(NSCredentialUser[])
   type: Method
-  summary: "\nThe list of actual users that can be selected\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetUsers(NSCredentialUser[] users)
+    content: Void SetUsers(NSCredentialUser[] users)
     parameters:
+    - id: users
+      type: CRMScript.NetServer.NSCredentialUser[]
+      description: The list of actual users that can be selected
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredentialsGroupUsers thing;\nNSCredentialUser[] users;\nthing.SetUsers(users);</code></pre>\n"
 references:
@@ -155,3 +163,9 @@ references:
   name: NSCredentialUser
   nameWithType: NSCredentialUser
   fullName: CRMScript.NetServer.NSCredentialUser
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
