--- a/docs/api-reference/CRMScript.NetServer.NSCsSessionKey.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCsSessionKey.yml
@@ -3,14 +3,13 @@ items:
 - uid: CRMScript.NetServer.NSCsSessionKey
   commentId: T:CRMScript.NetServer.NSCsSessionKey
   id: NSCsSessionKey
-  so.intellisense: Void.NSCsSessionKey
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCsSessionKey.#ctor
   - CRMScript.NetServer.NSCsSessionKey.GetKey()
   - CRMScript.NetServer.NSCsSessionKey.GetLoginId()
   - CRMScript.NetServer.NSCsSessionKey.GetUserId()
-  - CRMScript.NetServer.NSCsSessionKey.#ctor
   - CRMScript.NetServer.NSCsSessionKey.SetKey(String)
   - CRMScript.NetServer.NSCsSessionKey.SetLoginId(Integer)
   - CRMScript.NetServer.NSCsSessionKey.SetUserId(Integer)
@@ -20,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCsSessionKey.GetKey()
-  commentId: M:CRMScript.NetServer.NSCsSessionKey.GetKey()
-  id: 'GetKey()'
-  so.intellisense: NSCsSessionKey.GetKey
-  langs:
-  - crmscript
-  name: 'GetKey()'
-  nameWithType: NSCsSessionKey.GetKey()
-  fullName: CRMScript.NetServer.NSCsSessionKey.GetKey()
-  type: Method
-  summary: "\nThe session key created in the login table<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCsSessionKey thing;\nString key = thing.GetKey();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetKey()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCsSessionKey thing;\nString key = thing.GetKey();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCsSessionKey.GetLoginId()
-  commentId: M:CRMScript.NetServer.NSCsSessionKey.GetLoginId()
-  id: 'GetLoginId()'
-  so.intellisense: NSCsSessionKey.GetLoginId
-  langs:
-  - crmscript
-  name: 'GetLoginId()'
-  nameWithType: NSCsSessionKey.GetLoginId()
-  fullName: CRMScript.NetServer.NSCsSessionKey.GetLoginId()
-  type: Method
-  summary: "\nThe ID of the login row<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSCsSessionKey thing;\nInteger loginId = thing.GetLoginId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetLoginId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSCsSessionKey thing;\nInteger loginId = thing.GetLoginId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCsSessionKey.GetUserId()
-  commentId: M:CRMScript.NetServer.NSCsSessionKey.GetUserId()
-  id: 'GetUserId()'
-  so.intellisense: NSCsSessionKey.GetUserId
-  langs:
-  - crmscript
-  name: 'GetUserId()'
-  nameWithType: NSCsSessionKey.GetUserId()
-  fullName: CRMScript.NetServer.NSCsSessionKey.GetUserId()
-  type: Method
-  summary: "\nThe ejuser id owning this session key<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSCsSessionKey thing;\nInteger userId = thing.GetUserId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetUserId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSCsSessionKey thing;\nInteger userId = thing.GetUserId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCsSessionKey.#ctor
   commentId: M:CRMScript.NetServer.NSCsSessionKey.#ctor
   id: '#ctor'
@@ -92,6 +34,66 @@ items:
   syntax: 
     content: NSCsSessionKey
   example: 
+- uid: CRMScript.NetServer.NSCsSessionKey.GetKey()
+  commentId: M:CRMScript.NetServer.NSCsSessionKey.GetKey()
+  id: 'GetKey()'
+  so.intellisense: NSCsSessionKey.GetKey
+  langs:
+  - crmscript
+  name: 'GetKey()'
+  nameWithType: NSCsSessionKey.GetKey()
+  fullName: CRMScript.NetServer.NSCsSessionKey.GetKey()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetKey()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The session key created in the login table
+  example: 
+  - "\n<pre><code>NSCsSessionKey thing;\nString key = thing.GetKey();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCsSessionKey.GetLoginId()
+  commentId: M:CRMScript.NetServer.NSCsSessionKey.GetLoginId()
+  id: 'GetLoginId()'
+  so.intellisense: NSCsSessionKey.GetLoginId
+  langs:
+  - crmscript
+  name: 'GetLoginId()'
+  nameWithType: NSCsSessionKey.GetLoginId()
+  fullName: CRMScript.NetServer.NSCsSessionKey.GetLoginId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetLoginId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The ID of the login row
+  example: 
+  - "\n<pre><code>NSCsSessionKey thing;\nInteger loginId = thing.GetLoginId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCsSessionKey.GetUserId()
+  commentId: M:CRMScript.NetServer.NSCsSessionKey.GetUserId()
+  id: 'GetUserId()'
+  so.intellisense: NSCsSessionKey.GetUserId
+  langs:
+  - crmscript
+  name: 'GetUserId()'
+  nameWithType: NSCsSessionKey.GetUserId()
+  fullName: CRMScript.NetServer.NSCsSessionKey.GetUserId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetUserId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The ejuser ID owning this session key
+  example: 
+  - "\n<pre><code>NSCsSessionKey thing;\nInteger userId = thing.GetUserId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCsSessionKey.SetKey(String)
   commentId: M:CRMScript.NetServer.NSCsSessionKey.SetKey(String)
   id: 'SetKey(String)'
@@ -102,14 +104,16 @@ items:
   nameWithType: NSCsSessionKey.SetKey(String)
   fullName: CRMScript.NetServer.NSCsSessionKey.SetKey(String)
   type: Method
-  summary: "\nThe session key created in the login table\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetKey(String key)
+    content: Void SetKey(String key)
     parameters:
     - id: key
       type: CRMScript.Global.String
-      description: 
+      description: The session key created in the login table
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCsSessionKey thing;\nString key;\nthing.SetKey(key);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCsSessionKey.SetLoginId(Integer)
@@ -122,14 +126,16 @@ items:
   nameWithType: NSCsSessionKey.SetLoginId(Integer)
   fullName: CRMScript.NetServer.NSCsSessionKey.SetLoginId(Integer)
   type: Method
-  summary: "\nThe ID of the login row\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetLoginId(Integer loginId)
+    content: Void SetLoginId(Integer loginId)
     parameters:
     - id: loginId
       type: CRMScript.Global.Integer
-      description: 
+      description: The ID of the login row
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCsSessionKey thing;\nInteger loginId;\nthing.SetLoginId(loginId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCsSessionKey.SetUserId(Integer)
@@ -142,14 +148,16 @@ items:
   nameWithType: NSCsSessionKey.SetUserId(Integer)
   fullName: CRMScript.NetServer.NSCsSessionKey.SetUserId(Integer)
   type: Method
-  summary: "\nThe ejuser id owning this session key\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetUserId(Integer userId)
+    content: Void SetUserId(Integer userId)
     parameters:
     - id: userId
       type: CRMScript.Global.Integer
-      description: 
+      description: The ejuser ID owning this session key
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCsSessionKey thing;\nInteger userId;\nthing.SetUserId(userId);</code></pre>\n"
 references:
@@ -171,3 +179,9 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
