--- a/docs/api-reference/CRMScript.NetServer.NSCurrencyEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCurrencyEntity.yml
@@ -3,10 +3,10 @@ items:
 - uid: CRMScript.NetServer.NSCurrencyEntity
   commentId: T:CRMScript.NetServer.NSCurrencyEntity
   id: NSCurrencyEntity
-  so.intellisense: Void.NSCurrencyEntity
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCurrencyEntity.#ctor
   - CRMScript.NetServer.NSCurrencyEntity.GetCurrencyId()
   - CRMScript.NetServer.NSCurrencyEntity.GetDeleted()
   - CRMScript.NetServer.NSCurrencyEntity.GetName()
@@ -14,153 +14,19 @@ items:
   - CRMScript.NetServer.NSCurrencyEntity.GetRate()
   - CRMScript.NetServer.NSCurrencyEntity.GetTooltip()
   - CRMScript.NetServer.NSCurrencyEntity.GetUnits()
-  - CRMScript.NetServer.NSCurrencyEntity.#ctor
   - CRMScript.NetServer.NSCurrencyEntity.SetCurrencyId(Integer)
   - CRMScript.NetServer.NSCurrencyEntity.SetDeleted(Bool)
   - CRMScript.NetServer.NSCurrencyEntity.SetName(String)
   - CRMScript.NetServer.NSCurrencyEntity.SetRank(Integer)
-  - CRMScript.NetServer.NSCurrencyEntity.SetRate()
+  - CRMScript.NetServer.NSCurrencyEntity.SetRate(Float)
   - CRMScript.NetServer.NSCurrencyEntity.SetTooltip(String)
-  - CRMScript.NetServer.NSCurrencyEntity.SetUnits()
+  - CRMScript.NetServer.NSCurrencyEntity.SetUnits(Float)
   name: NSCurrencyEntity
   nameWithType: NSCurrencyEntity
   fullName: CRMScript.NetServer.NSCurrencyEntity
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCurrencyEntity.GetCurrencyId()
-  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetCurrencyId()
-  id: 'GetCurrencyId()'
-  so.intellisense: NSCurrencyEntity.GetCurrencyId
-  langs:
-  - crmscript
-  name: 'GetCurrencyId()'
-  nameWithType: NSCurrencyEntity.GetCurrencyId()
-  fullName: CRMScript.NetServer.NSCurrencyEntity.GetCurrencyId()
-  type: Method
-  summary: "\nPrimary key<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSCurrencyEntity thing;\nInteger currencyId = thing.GetCurrencyId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetCurrencyId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSCurrencyEntity thing;\nInteger currencyId = thing.GetCurrencyId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCurrencyEntity.GetDeleted()
-  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetDeleted()
-  id: 'GetDeleted()'
-  so.intellisense: NSCurrencyEntity.GetDeleted
-  langs:
-  - crmscript
-  name: 'GetDeleted()'
-  nameWithType: NSCurrencyEntity.GetDeleted()
-  fullName: CRMScript.NetServer.NSCurrencyEntity.GetDeleted()
-  type: Method
-  summary: "\n0 -&gt; record is active 1 -&gt; record is 'deleted' and should not be shown in lists<p></p>\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSCurrencyEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Bool GetDeleted()
-    parameters:
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSCurrencyEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCurrencyEntity.GetName()
-  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetName()
-  id: 'GetName()'
-  so.intellisense: NSCurrencyEntity.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSCurrencyEntity.GetName()
-  fullName: CRMScript.NetServer.NSCurrencyEntity.GetName()
-  type: Method
-  summary: "\nThe list item<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCurrencyEntity thing;\nString name = thing.GetName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCurrencyEntity thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCurrencyEntity.GetRank()
-  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetRank()
-  id: 'GetRank()'
-  so.intellisense: NSCurrencyEntity.GetRank
-  langs:
-  - crmscript
-  name: 'GetRank()'
-  nameWithType: NSCurrencyEntity.GetRank()
-  fullName: CRMScript.NetServer.NSCurrencyEntity.GetRank()
-  type: Method
-  summary: "\nRank order<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSCurrencyEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRank()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSCurrencyEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCurrencyEntity.GetRate()
-  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetRate()
-  id: 'GetRate()'
-  so.intellisense: NSCurrencyEntity.GetRate
-  langs:
-  - crmscript
-  name: 'GetRate()'
-  nameWithType: NSCurrencyEntity.GetRate()
-  fullName: CRMScript.NetServer.NSCurrencyEntity.GetRate()
-  type: Method
-  summary: "\nExchange rate<p></p>\n<strong>Returns:</strong>Float<p></p>\n<pre><code>NSCurrencyEntity thing;\nFloat rate = thing.GetRate();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Float GetRate()
-    parameters:
-    return:
-      type: CRMScript.Global.Float
-  example: 
-  - "\n<pre><code>NSCurrencyEntity thing;\nFloat rate = thing.GetRate();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCurrencyEntity.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSCurrencyEntity.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSCurrencyEntity.GetTooltip()
-  fullName: CRMScript.NetServer.NSCurrencyEntity.GetTooltip()
-  type: Method
-  summary: "\nTooltip or other description<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCurrencyEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCurrencyEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCurrencyEntity.GetUnits()
-  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetUnits()
-  id: 'GetUnits()'
-  so.intellisense: NSCurrencyEntity.GetUnits
-  langs:
-  - crmscript
-  name: 'GetUnits()'
-  nameWithType: NSCurrencyEntity.GetUnits()
-  fullName: CRMScript.NetServer.NSCurrencyEntity.GetUnits()
-  type: Method
-  summary: "\nExchange unit scale (0.01, 0.1, 1, 10, 100 etc)<p></p>\n<strong>Returns:</strong>Float<p></p>\n<pre><code>NSCurrencyEntity thing;\nFloat units = thing.GetUnits();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Float GetUnits()
-    parameters:
-    return:
-      type: CRMScript.Global.Float
-  example: 
-  - "\n<pre><code>NSCurrencyEntity thing;\nFloat units = thing.GetUnits();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCurrencyEntity.#ctor
   commentId: M:CRMScript.NetServer.NSCurrencyEntity.#ctor
   id: '#ctor'
@@ -176,6 +42,146 @@ items:
   syntax: 
     content: NSCurrencyEntity
   example: 
+- uid: CRMScript.NetServer.NSCurrencyEntity.GetCurrencyId()
+  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetCurrencyId()
+  id: 'GetCurrencyId()'
+  so.intellisense: NSCurrencyEntity.GetCurrencyId
+  langs:
+  - crmscript
+  name: 'GetCurrencyId()'
+  nameWithType: NSCurrencyEntity.GetCurrencyId()
+  fullName: CRMScript.NetServer.NSCurrencyEntity.GetCurrencyId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetCurrencyId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSCurrencyEntity thing;\nInteger currencyId = thing.GetCurrencyId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCurrencyEntity.GetDeleted()
+  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetDeleted()
+  id: 'GetDeleted()'
+  so.intellisense: NSCurrencyEntity.GetDeleted
+  langs:
+  - crmscript
+  name: 'GetDeleted()'
+  nameWithType: NSCurrencyEntity.GetDeleted()
+  fullName: CRMScript.NetServer.NSCurrencyEntity.GetDeleted()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetDeleted()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: 0 -&gt; record is active 1 -&gt; record is 'deleted' and should not be shown in lists
+  example: 
+  - "\n<pre><code>NSCurrencyEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCurrencyEntity.GetName()
+  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetName()
+  id: 'GetName()'
+  so.intellisense: NSCurrencyEntity.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSCurrencyEntity.GetName()
+  fullName: CRMScript.NetServer.NSCurrencyEntity.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The list item
+  example: 
+  - "\n<pre><code>NSCurrencyEntity thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCurrencyEntity.GetRank()
+  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetRank()
+  id: 'GetRank()'
+  so.intellisense: NSCurrencyEntity.GetRank
+  langs:
+  - crmscript
+  name: 'GetRank()'
+  nameWithType: NSCurrencyEntity.GetRank()
+  fullName: CRMScript.NetServer.NSCurrencyEntity.GetRank()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetRank()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Rank order
+  example: 
+  - "\n<pre><code>NSCurrencyEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCurrencyEntity.GetRate()
+  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetRate()
+  id: 'GetRate()'
+  so.intellisense: NSCurrencyEntity.GetRate
+  langs:
+  - crmscript
+  name: 'GetRate()'
+  nameWithType: NSCurrencyEntity.GetRate()
+  fullName: CRMScript.NetServer.NSCurrencyEntity.GetRate()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Float GetRate()
+    parameters: []
+    return:
+      type: CRMScript.Global.Float
+      description: Exchange rate
+  example: 
+  - "\n<pre><code>NSCurrencyEntity thing;\nFloat rate = thing.GetRate();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCurrencyEntity.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSCurrencyEntity.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSCurrencyEntity.GetTooltip()
+  fullName: CRMScript.NetServer.NSCurrencyEntity.GetTooltip()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Tooltip or other description
+  example: 
+  - "\n<pre><code>NSCurrencyEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCurrencyEntity.GetUnits()
+  commentId: M:CRMScript.NetServer.NSCurrencyEntity.GetUnits()
+  id: 'GetUnits()'
+  so.intellisense: NSCurrencyEntity.GetUnits
+  langs:
+  - crmscript
+  name: 'GetUnits()'
+  nameWithType: NSCurrencyEntity.GetUnits()
+  fullName: CRMScript.NetServer.NSCurrencyEntity.GetUnits()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Float GetUnits()
+    parameters: []
+    return:
+      type: CRMScript.Global.Float
+      description: Exchange unit scale (0.01, 0.1, 1, 10, 100 etc)
+  example: 
+  - "\n<pre><code>NSCurrencyEntity thing;\nFloat units = thing.GetUnits();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCurrencyEntity.SetCurrencyId(Integer)
   commentId: M:CRMScript.NetServer.NSCurrencyEntity.SetCurrencyId(Integer)
   id: 'SetCurrencyId(Integer)'
@@ -186,14 +192,16 @@ items:
   nameWithType: NSCurrencyEntity.SetCurrencyId(Integer)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetCurrencyId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetCurrencyId(Integer currencyId)
+    content: Void SetCurrencyId(Integer currencyId)
     parameters:
     - id: currencyId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCurrencyEntity thing;\nInteger currencyId;\nthing.SetCurrencyId(currencyId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCurrencyEntity.SetDeleted(Bool)
@@ -206,14 +214,16 @@ items:
   nameWithType: NSCurrencyEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetDeleted(Bool)
   type: Method
-  summary: "\n0 -&gt; record is active 1 -&gt; record is 'deleted' and should not be shown in lists\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetDeleted(Bool deleted)
+    content: Void SetDeleted(Bool deleted)
     parameters:
     - id: deleted
       type: CRMScript.Global.Bool
-      description: 
+      description: 0 -&gt; record is active 1 -&gt; record is 'deleted' and should not be shown in lists
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCurrencyEntity thing;\nBool deleted;\nthing.SetDeleted(deleted);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCurrencyEntity.SetName(String)
@@ -226,14 +236,16 @@ items:
   nameWithType: NSCurrencyEntity.SetName(String)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetName(String)
   type: Method
-  summary: "\nThe list item\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetName(String name)
+    content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The list item
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCurrencyEntity thing;\nString name;\nthing.SetName(name);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCurrencyEntity.SetRank(Integer)
@@ -246,31 +258,38 @@ items:
   nameWithType: NSCurrencyEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetRank(Integer)
   type: Method
-  summary: "\nRank order\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetRank(Integer rank)
+    content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: Rank order
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCurrencyEntity thing;\nInteger rank;\nthing.SetRank(rank);</code></pre>\n"
-- uid: CRMScript.NetServer.NSCurrencyEntity.SetRate()
-  commentId: M:CRMScript.NetServer.NSCurrencyEntity.SetRate()
-  id: 'SetRate()'
+- uid: CRMScript.NetServer.NSCurrencyEntity.SetRate(Float)
+  commentId: M:CRMScript.NetServer.NSCurrencyEntity.SetRate(Float)
+  id: 'SetRate(Float)'
   so.intellisense: NSCurrencyEntity.SetRate
   langs:
   - crmscript
-  name: 'SetRate()'
-  nameWithType: NSCurrencyEntity.SetRate()
-  fullName: CRMScript.NetServer.NSCurrencyEntity.SetRate()
+  name: 'SetRate(Float)'
+  nameWithType: NSCurrencyEntity.SetRate(Float)
+  fullName: CRMScript.NetServer.NSCurrencyEntity.SetRate(Float)
   type: Method
-  summary: "\nExchange rate\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetRate(Float rate)
+    content: Void SetRate(Float rate)
     parameters:
+    - id: rate
+      type: CRMScript.Global.Float
+      description: Exchange rate
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCurrencyEntity thing;\nFloat rate;\nthing.SetRate(rate);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCurrencyEntity.SetTooltip(String)
@@ -283,31 +302,38 @@ items:
   nameWithType: NSCurrencyEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetTooltip(String)
   type: Method
-  summary: "\nTooltip or other description\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetTooltip(String tooltip)
+    content: Void SetTooltip(String tooltip)
     parameters:
     - id: tooltip
       type: CRMScript.Global.String
-      description: 
+      description: Tooltip or other description
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCurrencyEntity thing;\nString tooltip;\nthing.SetTooltip(tooltip);</code></pre>\n"
-- uid: CRMScript.NetServer.NSCurrencyEntity.SetUnits()
-  commentId: M:CRMScript.NetServer.NSCurrencyEntity.SetUnits()
-  id: 'SetUnits()'
+- uid: CRMScript.NetServer.NSCurrencyEntity.SetUnits(Float)
+  commentId: M:CRMScript.NetServer.NSCurrencyEntity.SetUnits(Float)
+  id: 'SetUnits(Float)'
   so.intellisense: NSCurrencyEntity.SetUnits
   langs:
   - crmscript
-  name: 'SetUnits()'
-  nameWithType: NSCurrencyEntity.SetUnits()
-  fullName: CRMScript.NetServer.NSCurrencyEntity.SetUnits()
+  name: 'SetUnits(Float)'
+  nameWithType: NSCurrencyEntity.SetUnits(Float)
+  fullName: CRMScript.NetServer.NSCurrencyEntity.SetUnits(Float)
   type: Method
-  summary: "\nExchange unit scale (0.01, 0.1, 1, 10, 100 etc)\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: SetUnits(Float units)
+    content: Void SetUnits(Float units)
     parameters:
+    - id: units
+      type: CRMScript.Global.Float
+      description: Exchange unit scale (0.01, 0.1, 1, 10, 100 etc)
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCurrencyEntity thing;\nFloat units;\nthing.SetUnits(units);</code></pre>\n"
 references:
@@ -341,3 +367,9 @@ references:
   name: Float
   nameWithType: Float
   fullName: CRMScript.Global.Float
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
