--- a/docs/api-reference/CRMScript.NetServer.NSDeliveryTerm.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDeliveryTerm.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSDeliveryTerm.GetId()
   fullName: CRMScript.NetServer.NSDeliveryTerm.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSDeliveryTerm<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSDeliveryTerm thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSDeliveryTerm<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSDeliveryTerm thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSDeliveryTerm.SetId(Integer)
   fullName: CRMScript.NetServer.NSDeliveryTerm.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSDeliveryTerm\n"
+  summary: "\nSet the primary key (ID) for the NSDeliveryTerm\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
