--- a/docs/api-reference/CRMScript.NetServer.NSDeliveryType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDeliveryType.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSDeliveryType.GetId()
   fullName: CRMScript.NetServer.NSDeliveryType.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the DeliveryType<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSDeliveryType thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the DeliveryType<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSDeliveryType thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSDeliveryType.SetId(Integer)
   fullName: CRMScript.NetServer.NSDeliveryType.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the DeliveryType\n"
+  summary: "\nSet the primary key (ID) for the DeliveryType\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
