--- a/docs/api-reference/CRMScript.NetServer.NSMrMrs.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMrMrs.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSMrMrs.GetId()
   fullName: CRMScript.NetServer.NSMrMrs.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSMrMrs<p></p>\n<strong>Returns:</strong>Integer NSMrMrs id.<p></p>\n<pre><code>NSMrMrs thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSMrMrs<p></p>\n<strong>Returns:</strong>Integer NSMrMrs id.<p></p>\n<pre><code>NSMrMrs thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSMrMrs.SetId(Integer)
   fullName: CRMScript.NetServer.NSMrMrs.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSMrMrs\n"
+  summary: "\nSet the primary key (ID) for the NSMrMrs\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
