--- a/docs/api-reference/CRMScript.NetServer.NSPaymentType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPaymentType.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSPaymentType.GetId()
   fullName: CRMScript.NetServer.NSPaymentType.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSPaymentType<p></p>\n<strong>Returns:</strong>Integer NSPaymentType id.<p></p>\n<pre><code>NSPaymentType thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSPaymentType<p></p>\n<strong>Returns:</strong>Integer NSPaymentType id.<p></p>\n<pre><code>NSPaymentType thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSPaymentType.SetId(Integer)
   fullName: CRMScript.NetServer.NSPaymentType.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSPaymentType\n"
+  summary: "\nSet the primary key (ID) for the NSPaymentType\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
