--- a/docs/api-reference/CRMScript.NetServer.NSPosition.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPosition.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSPosition.GetId()
   fullName: CRMScript.NetServer.NSPosition.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSPosition<p></p>\n<strong>Returns:</strong>Integer NSPosition id.<p></p>\n<pre><code>NSPosition thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSPosition<p></p>\n<strong>Returns:</strong>Integer NSPosition id.<p></p>\n<pre><code>NSPosition thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSPosition.SetId(Integer)
   fullName: CRMScript.NetServer.NSPosition.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSPosition\n"
+  summary: "\nSet the primary key (ID) for the NSPosition\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
