--- a/docs/api-reference/CRMScript.NetServer.NSProductCategory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProductCategory.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSProductCategory.GetId()
   fullName: CRMScript.NetServer.NSProductCategory.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSProductCategory<p></p>\n<strong>Returns:</strong>Integer NSProductCategory id.<p></p>\n<pre><code>NSProductCategory thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSProductCategory<p></p>\n<strong>Returns:</strong>Integer NSProductCategory id.<p></p>\n<pre><code>NSProductCategory thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSProductCategory.SetId(Integer)
   fullName: CRMScript.NetServer.NSProductCategory.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSProductCategory\n"
+  summary: "\nSet the primary key (ID) for the NSProductCategory\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
