--- a/docs/api-reference/CRMScript.NetServer.NSProductFamily.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProductFamily.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSProductFamily.GetId()
   fullName: CRMScript.NetServer.NSProductFamily.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSProductFamily<p></p>\n<strong>Returns:</strong>Integer NSProductFamily id.<p></p>\n<pre><code>NSProductFamily thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSProductFamily<p></p>\n<strong>Returns:</strong>Integer NSProductFamily id.<p></p>\n<pre><code>NSProductFamily thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSProductFamily.SetId(Integer)
   fullName: CRMScript.NetServer.NSProductFamily.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSProductFamily\n"
+  summary: "\nSet the primary key (ID) for the NSProductFamily\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
