--- a/docs/api-reference/CRMScript.NetServer.NSProjectStatus.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectStatus.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSProjectStatus.GetId()
   fullName: CRMScript.NetServer.NSProjectStatus.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSProjectStatus<p></p>\n<strong>Returns:</strong>Integer NSProjectStatus id.<p></p>\n<pre><code>NSProjectStatus thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSProjectStatus<p></p>\n<strong>Returns:</strong>Integer NSProjectStatus id.<p></p>\n<pre><code>NSProjectStatus thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSProjectStatus.SetId(Integer)
   fullName: CRMScript.NetServer.NSProjectStatus.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSProjectStatus\n"
+  summary: "\nSet the primary key (ID) for the NSProjectStatus\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
