--- a/docs/api-reference/CRMScript.NetServer.NSReason.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReason.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSReason.GetId()
   fullName: CRMScript.NetServer.NSReason.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSReason<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSReason thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSReason<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSReason thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSReason.SetId(Integer)
   fullName: CRMScript.NetServer.NSReason.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSReason\n"
+  summary: "\nSet the primary key (ID) for the NSReason\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
