--- a/docs/api-reference/CRMScript.NetServer.NSRelationToOwner.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRelationToOwner.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSRelationToOwner.GetId()
   fullName: CRMScript.NetServer.NSRelationToOwner.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSRelationToOwner<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSRelationToOwner thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSRelationToOwner<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSRelationToOwner thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSRelationToOwner.SetId(Integer)
   fullName: CRMScript.NetServer.NSRelationToOwner.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSRelationToOwner\n"
+  summary: "\nSet the primary key (ID) for the NSRelationToOwner\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
