--- a/docs/api-reference/CRMScript.NetServer.NSSaleType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleType.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSSaleType.GetId()
   fullName: CRMScript.NetServer.NSSaleType.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSSaleType<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSSaleType thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSSaleType<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSSaleType thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSSaleType.SetId(Integer)
   fullName: CRMScript.NetServer.NSSaleType.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSSaleType\n"
+  summary: "\nSet the primary key (ID) for the NSSaleType\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
