--- a/docs/api-reference/CRMScript.NetServer.NSSelectionCategory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionCategory.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSSelectionCategory.GetId()
   fullName: CRMScript.NetServer.NSSelectionCategory.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the SelectionCategory<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSSelectionCategory thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the SelectionCategory<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSSelectionCategory thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSSelectionCategory.SetId(Integer)
   fullName: CRMScript.NetServer.NSSelectionCategory.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the SelectionCategory\n"
+  summary: "\nSet the primary key (ID) for the SelectionCategory\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
