--- a/docs/api-reference/CRMScript.NetServer.NSTicketCategory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketCategory.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSTicketCategory.GetId()
   fullName: CRMScript.NetServer.NSTicketCategory.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSTicketCategory<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicketCategory thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSTicketCategory<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicketCategory thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSTicketCategory.SetId(Integer)
   fullName: CRMScript.NetServer.NSTicketCategory.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSTicketCategory\n"
+  summary: "\nSet the primary key (ID) for the NSTicketCategory\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
