--- a/docs/api-reference/CRMScript.NetServer.NSTicketPriority.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketPriority.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSTicketPriority.GetId()
   fullName: CRMScript.NetServer.NSTicketPriority.GetId()
   type: Method
-  summary: "\nGet the primary key (id) for the NSTicketPriority<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicketPriority thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nGet the primary key (ID) for the NSTicketPriority<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicketPriority thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSTicketPriority.SetId(Integer)
   fullName: CRMScript.NetServer.NSTicketPriority.SetId(Integer)
   type: Method
-  summary: "\nSet the primary key (id) for the NSTicketPriority\n"
+  summary: "\nSet the primary key (ID) for the NSTicketPriority\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
